prombench/manifests/cluster-infra/8b_parca.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parca
  labels:
    app: parca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parca
  template:
    metadata:
      labels:
        app: parca
    spec:
      serviceAccountName: parca
      securityContext:
        fsGroup: 65534
        runAsUser: 65534
      containers:
      - image: ghcr.io/parca-dev/parca:v0.23.1
        args:
        - /parca
        - "--http-address=:7070"
        - "--config-path=/etc/parca/parca.yaml"
        - "--path-prefix=/profiles"
        - "--log-level=info"
        - "--cors-allowed-origins=*"
        - "--debuginfod-upstream-servers=https://debuginfod.systemtap.org"
        - "--debuginfod-http-request-timeout=5m"
        name: parca
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /etc/parca
          name: config
        - mountPath: /var/secrets/gcs-service-account
          name: gcs-service-account
          readOnly: true
        ports:
        - name: parca-web
          containerPort: 7070
      volumes:
      - name: config
        configMap:
          name: parca
      - name: gcs-service-account
        secret:
          secretName: parca-gcs-service-account
      terminationGracePeriodSeconds: 120
      nodeSelector:
        cloud.google.com/gke-nodepool: main-node
---
apiVersion: v1
kind: Service
metadata:
  name: parca
  labels:
    app: parca
spec:
  type: NodePort
  ports:
  - name: parca-web
    port: 80
    targetPort: parca-web
  selector:
    app: parca
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-parca
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: parca
            port:
              name: parca-web
        path: /profiles
        pathType: Prefix
